--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,3 +10,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - name: Install NodeJS v20 
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
