--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,16 @@ jobs:
         with:
           node-version: 20
       - run: yarn install
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build
+      - name: Build and Push
         uses: docker/build-push-action@v6
         with:
-          push: false
+          push: true
           tags: davevb/webapp:latest
       
