--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v
+        uses: actions/checkout@v4
       - name: Install NodeJS v20 
         uses: actions/setup-node@v4
         with:
